--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ django = "^3.0.3"
 black = "^19.10b0"
 flake8 = "^3.7.9"
 channels = "^2.4.0"
+channels-redis = "^2.4.2"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.12.0"
